[package]
name = "bulletproofs_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
bulletproofs = "4.0"
curve25519-dalek-ng = "4.1.1"
merlin = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
